<resources>
    <string name="app_name">ArticleSearch</string>
    <string name="settings">Settings</string>
    <string name="settings_toolbar_description">Toolbar for settings screen</string>
    <string name="nav_books">Books</string>
    <string name="nav_articles">Articles</string>
    <string name="nav_books_description">Navigate to Best Seller Books</string>
    <string name="nav_articles_description">Navigate to Latest Articles</string>
    <string name="loading_articles">Loading articles</string>
    <string name="no_articles_found">No articles found</string>
    <string name="book_ranking_default">1</string>
    <string name="book_title_default">Book Title</string>
    <string name="book_author_default">Author Name</string>
    <string name="book_description_default">Description</string>
    <string name="buy_button_text">Buy on Amazon</string>
    <string name="book_image_description">Book Cover Image</string>
    <string name="buy_button_description">Buy this book on Amazon</string>
    <string name="loading_books">Loading books</string>
    <string name="no_books_found">No books found</string>
    <string name="article_image_placeholder">Article thumbnail</string>
    <string name="article_image">"Article Image"</string>


</resources>